# mcp-github-rag

./: .gitignore  README.md  config.json  pack.sh  pyproject.toml  smithery.yaml
src/mcp-github-rag/: main.py
src/mcp_github_rag/: __main__.py  client.py  main.py
