[project]
name = "mcp-github-rag"
version = "0.1.0"
description = "MCP Git Ingest: GitHub repository analysis tools"
authors = [
    {name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com"},
]
dependencies = [
    "gitingest",
    "llama-index",
    "llama-index-llms-ollama",
    "llama-index-agent-openai",
    "llama-index-llms-openai"
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
mcp-github-rag = "mcp-github-rag.main:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp-github-rag"]